--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>My First Webpage</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css"/>
   </head>
 
   <body>
+    <div class="header">
+        <div class="headerlogo">
+            <div>Header Logo</div>
+        </div>
+        <div class="headerlinks">
+            <ul>
+                <li><a href="#">header link one</a></a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
 
+        <div class="headertitle-container">
+            <div class="headertitle">This website is awesome
+
+            <div class="headertitle">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+
+            <button class="sign-up headertitle">Sign Up</button>
+            </div>
+        </div>
+    </div>
+
+    
+    <div>This is a placeholder for an image</div>
   </body>
 </html>
 
