Adjusted font-size, font-weight for header-logo. Added first section main body lines in HTML

--- a/index1.html
+++ b/index1.html
@@ -23,6 +23,10 @@
                         </li>
                 </ul>
             </div>
+            <div class="header-main-body">
+                <div class="header-main-logo">This website is awesome</div>
+                <div class="header-main-body">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            </div>
         </div>
 
 
