Added placeholder image section in first section. Added CSS for placeholder image, to start working on flexbox for the body of section one.

--- a/index1.html
+++ b/index1.html
@@ -25,8 +25,10 @@
             </div>
             <div class="header-main-body">
                 <div class="header-main-logo">This website is awesome</div>
-                <div class="header-main-body">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="header-main-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button class="first-button">Sign up</button>
             </div>
+            <div class="header-placeholder-image">this is a placeholder for an image</div>
         </div>
 
 
