Comments added to index1.html. Need to make adjustments to header-main-body by adding classes or moving div tags to allow better manipulation of flexbox

--- a/index1.html
+++ b/index1.html
@@ -23,6 +23,7 @@
                         </li>
                 </ul>
             </div>
+            <!--we need to make an adjustment below. Either adding more classes, or moving div tags so they can be properly adjusted with flex box-->
             <div class="header-main-body">
                 <div class="header-main-logo">This website is awesome</div>
                 <div class="header-main-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
