Added Section four html.Still unable to make section three quote thinner. To adjust font?

--- a/index1.html
+++ b/index1.html
@@ -72,6 +72,16 @@
             </div>
 
         </div>
+
+        <div class="section-four-container">
+            <div class="blue-box-container">
+                <div class="call-quote">Call to action! It's time!</div>
+                <div class="call-directions">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="second-button">
+                <button class="sign-up-button">Sign up</button>
+            </div>
+        </div>
         
     </body>
 </html>
