--- a/index1.html
+++ b/index1.html
@@ -75,12 +75,15 @@
 
         <div class="section-four-container">
             <div class="blue-box-container">
-                <div class="call-quote">Call to action! It's time!</div>
-                <div class="call-directions">Sign up for our product by clicking that button right over there!</div>
+                <div class="dialogue-container">
+                    <div class="call-quote">Call to action! It's time!</div>
+                    <div class="call-directions">Sign up for our product by clicking that button right over there!</div>
+                </div> 
+                <div class="second-button">
+                    <button class="sign-up-button">Sign up</button>
+                </div>
             </div>
-            <div class="second-button">
-                <button class="sign-up-button">Sign up</button>
-            </div>
+            
         </div>
         
     </body>
