Added Copyright footer. Completed majority of end goal but to finalise and clean up code.

--- a/index1.html
+++ b/index1.html
@@ -85,6 +85,12 @@
             </div>
             
         </div>
+
+        <div class="copyright-container">
+            <div class="copyright">
+                Copyright © The Odin Project 2021
+            </div>
+        </div>
         
     </body>
 </html>
